# local_match

./: .clang-format  .gitignore  Dockerfile  README.md  Vagrantfile  git-pre-commit-format  install-pre-commit-format.sh
build-localMatchApp-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp
localMatchApp/: CMakeLists.txt  LocalMatch.pro  LocalMatch.pro.shared  localMatchApp.pro  log.cpp  log.h  logIn.cpp  logIn.h  main.cpp
localMatchApp/Headers/: logIn.h
localMatchApp/Sources/: logIn.cpp  main.cpp  mainwindow.cpp
localMatchApp/forms/: homewindow.ui  mainwindow.ui  signup.ui
localMatchApp/headers/: Activity.h  Database.h  DatabaseManager.h  GeneralEvent.h  Login.h  Person.h  User.h  classevent.h  events.h  functions.h  functionsevent.h  homewindow.h  mainwindow.h  signup.h
localMatchApp/resources/: resources.qrc
localMatchApp/sources/: Activity.cpp  Database.cpp  DatabaseManager.cpp  GeneralEvent.cpp  Login.cpp  Person.cpp  User.cpp  classevent.cpp  events.cpp  functions.cpp  functionsevent.cpp  homewindow.cpp  mainwindow.cpp  signup.cpp
localMatchApp/test/: activitytest.cpp  logintest.cpp  maintest.cpp  usertest.cpp
